# AI_Test

./: README.md  ai_audio.py  ai_engines.py  ai_micro.py  ia_perroquet.py  pyproject.toml
src/: ai_synthesis.py  ai_text.py  ai_vision.py  audio_processor.py  main.py
